# Wallpaper-Changer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main.py  requirements.txt  settings.toml
WallpaperChanger/: config_wallpaper.py  generate_wallpaper.py
src/: main.cpp
